kubernetes/apps/tools/forgejo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gatus.home-operations.com/endpoint: |
      url: https://git.xcd.dev/api/healthz
      conditions:
        - '[STATUS] == 200'
        - '[BODY].status == pass'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - git.xcd.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
